2011-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: work around Tru64 sh -e issues for instspc*.test.
	Apparently, Tru64 sh does not like turning off errexit mode,
	and gets confused.
	* tests/defs: Document 'errexit' cleanliness requirement.
	* tests/defs-static.in: Likewise.  Avoid error from command
	substitution to abort instspc*.test with Tru64/OSF 5.1 sh.
	* tests/instspc-tests.sh: Drop now-unneeded temporary errexit
	dropping.  Add strategic '|| Exit' to let tests work on Tru64.

2011-01-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: hard error in case of internal failures or signal caught
	* tests/defs: Exit with status 99 (hard error) rather than
	1 (failure) on unexpected/internal errors, or when a signal
	is caught by the client script.

	Tests defs: don't let useless variables leak in test scripts.
	* tests/defs ($priv_check_temp, $overwrite_status, $ro_dir_temp,
	$create_status, $r2h, $libtool_found, $gettext_found, $aclocaldir,
	$extra_includes): Unset once they've served their purpose.

2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix parallel testsuite run with Zsh.
	This change deals with a Zsh incompatibility in the handling
	of the special shell variable `$0' in sourced files; this
	incompatibility used to cause utter breakage when the
	Automake testsuite was run in parallel mode with Zsh as
	the $(TEST_LOG_COMPILER).
	For more information, please refer to the thread "Fix parallel
	testsuite run with zsh" on automake-patches, dated 2010-12-22:
	 <http://lists.gnu.org/archive/html/automake-patches/2010-12/msg00135.html>
	This change works around the problems described above for Zsh 4.3
	or later, and offers better error messages (instead of random
	failures) for earlier Zsh version.
	* tests/README (Supported shells): When describing the manual
	workaround about the Zsh incompatibility in the handling of `$0',
	tell that it is now needed only with Zsh versions preceding 4.3.