@@ -1,3 +1,9 @@
+2011-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	tests: revert not turning off errexit in instspc-test.sh
+	* tests/instspc-tests.sh: Turn off errexit while sourcing defs,
+	the scripts might still not be clean.
+
 2011-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	tests: work around Tru64 sh -e issues for instspc*.test.
